// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/MemberList should render empty tips when request not success 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-empty ant-table-has-fix-right"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
              >
                <table
                  style="table-layout: auto;"
                >
                  <colgroup>
                    <col
                      style="width: 10%;"
                    />
                    <col
                      style="width: 10%;"
                    />
                    <col
                      style="width: 20%;"
                    />
                    <col
                      style="width: 30%;"
                    />
                    <col
                      style="width: 20%;"
                    />
                    <col
                      style="width: 246px;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        用户名
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        平台角色
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        所属项目
                      </th>
                      <th
                        class="ant-table-cell ellipsis-column-width"
                        scope="col"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            当前项目操作权限
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <span
                              aria-label="info-circle"
                              class="anticon anticon-info-circle tooltips-default-icon"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="info-circle"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                />
                                <path
                                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        当前项目管理权限
                      </th>
                      <th
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        scope="col"
                        style="position: sticky; right: 0px;"
                      >
                        操作
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      class="ant-table-placeholder"
                    >
                      <td
                        class="ant-table-cell"
                        colspan="6"
                      >
                        <div
                          class="ant-result ant-result-error"
                        >
                          <div
                            class="ant-result-icon"
                          >
                            <span
                              aria-label="close-circle"
                              class="anticon anticon-close-circle"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="close-circle"
                                fill="currentColor"
                                fill-rule="evenodd"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
                                />
                              </svg>
                            </span>
                          </div>
                          <div
                            class="ant-result-title"
                          >
                            请求错误
                          </div>
                          <div
                            class="ant-result-subtitle"
                          >
                            error
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/MemberList should render member table 1`] = `
<body>
  <div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-has-fix-right"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
              >
                <table
                  style="table-layout: auto;"
                >
                  <colgroup>
                    <col
                      style="width: 10%;"
                    />
                    <col
                      style="width: 10%;"
                    />
                    <col
                      style="width: 20%;"
                    />
                    <col
                      style="width: 30%;"
                    />
                    <col
                      style="width: 20%;"
                    />
                    <col
                      style="width: 246px;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        用户名
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        平台角色
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        所属项目
                      </th>
                      <th
                        class="ant-table-cell ellipsis-column-width"
                        scope="col"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            当前项目操作权限
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <span
                              aria-label="info-circle"
                              class="anticon anticon-info-circle tooltips-default-icon"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="info-circle"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                />
                                <path
                                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        当前项目管理权限
                      </th>
                      <th
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        scope="col"
                        style="position: sticky; right: 0px;"
                      >
                        操作
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700501"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        admin
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <span>
                          ALL
                        </span>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <span>
                          ALL
                        </span>
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  编 辑
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                hidden=""
                                type="button"
                              >
                                <span>
                                  管理成员组
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                hidden=""
                                type="button"
                              >
                                <span>
                                  移 除
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700502"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        test
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                          style="flex-wrap: wrap; margin-bottom: -4px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 4px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1mjwlcb"
                              style="height: 28px;"
                            >
                              普通用户
                            </span>
                          </div>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                          style="flex-wrap: wrap; margin-bottom: -4px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 4px;"
                          >
                            <span
                              class="ant-tag ant-tag-orange basic-tag-wrapper basic-small-tag-wrapper css-17gmaof"
                              style="height: 28px;"
                            >
                              <svg
                                height="16"
                                viewBox="0 0 18 18"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                                  fill="#EBAD1C"
                                />
                              </svg>
                              default
                            </span>
                          </div>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <span>
                          ALL
                        </span>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <span>
                          ALL
                        </span>
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  编 辑
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  管理成员组
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  移 除
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="700503"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        test-2
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                          style="flex-wrap: wrap; margin-bottom: -4px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 4px;"
                          >
                            <span
                              class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1mjwlcb"
                              style="height: 28px;"
                            >
                              普通用户
                            </span>
                          </div>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                          style="flex-wrap: wrap; margin-bottom: -4px;"
                        >
                          <div
                            class="ant-space-item"
                            style="padding-bottom: 4px;"
                          >
                            <span
                              class="ant-tag ant-tag-orange basic-tag-wrapper basic-small-tag-wrapper css-17gmaof"
                              style="height: 28px;"
                            >
                              <svg
                                height="16"
                                viewBox="0 0 18 18"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M2.25 2.25h7.037a.75.75 0 0 1 .67.415L10.5 3.75H15a.75.75 0 0 1 .75.75v8.25a.75.75 0 0 1-.75.75h-4.786a.75.75 0 0 1-.671-.415L9 12H3.75v4.5h-1.5z"
                                  fill="#EBAD1C"
                                />
                              </svg>
                              default
                            </span>
                          </div>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <div
                          class="ant-space ant-space-vertical"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <div
                              class="ant-space ant-space-vertical"
                            >
                              <div
                                class="ant-space-item"
                                style="margin-bottom: 8px;"
                              >
                                <span
                                  class="ant-typography"
                                >
                                  mysql-test
                                  :
                                </span>
                              </div>
                              <div
                                class="ant-space-item"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center"
                                  style="flex-wrap: wrap; margin-bottom: -4px;"
                                >
                                  <div
                                    class="ant-space-item"
                                    style="padding-bottom: 4px;"
                                  >
                                    <span
                                      class="ant-tag ant-tag-default basic-tag-wrapper basic-small-tag-wrapper css-1mjwlcb"
                                      style="height: 28px;"
                                    >
                                      开发工程师
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  编 辑
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                hidden=""
                                type="button"
                              >
                                <span>
                                  管理成员组
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  移 除
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 3 条数据
              </span>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="上一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="下一页"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="页码"
                class="ant-select ant-pagination-options-size-changer ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="页码"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 条/页"
                  >
                    20 条/页
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;
